# nonebot2-chatbot

./: .env.dev  .gitignore  Dockerfile  README.md  bot.py  docker-compose.yml  package-lock.json  pyproject.toml
nb2/plugins/pghook/: __init__.py  config.py  fancyuni.py  hooks.py
nb2/plugins/pgreportstats/: __init__.py  config.py
nb2/plugins/teleport/: __init__.py  config.py
