[tool.poetry]
name = "imggbot"
version = "0.1.0"
description = "nb2"
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
nonebot2 = "^2.0.0-rc.2"
playwright = "^1.22.0"
nonebot-adapter-onebot = "^2.1.5"
aiohttp = "^3.8.1"

[tool.poetry.dev-dependencies]
nb-cli = "^0.6.0"

[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.1"

[tool.nonebot]
plugin_dirs = ["nb2/plugins"]

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
